Fixed group search button theme width cutoff

--- a/docroot/profiles/drupal_commons/themes/acquia_commons/css/acquia_commons-style.css
+++ b/docroot/profiles/drupal_commons/themes/acquia_commons/css/acquia_commons-style.css
@@ -2923,7 +2923,7 @@ div#block-og_views-0 h2.title {
 }
 
 #views-exposed-form-og-search-page-1 .views-exposed-widget.views-exposed-submit {
-	width: 100px;
+
 }
 
 #views-exposed-form-og-search-page-1 .views-exposed-widgets {
